<resources>
    <string name="app_name">BungeJoin</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="input_account">输入账号/字母或数字</string>
    <string name="input_password">输入密码/16位内数字字母</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="home">主页</string>
    <string name="world">世界</string>
    <string name="hobby">爱好</string>
    <string name="art">美术</string>
    <string name="music">音乐</string>
    <string name="photography">摄影</string>
    <string name="game">游戏</string>
    <string name="reading">阅读</string>
    <string name="picture">图片</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="_else">其他</string>

    <string name="spinner_basetype">请选择类型</string>

    <string name="weibotype_sharepics">分享了几张图片</string>
    <string name="weibotype_text">纯文字</string>
    <string name="retweet_sharepics">转发了几张图片</string>
    <string name="retweet_text">转发了一则文字</string>
    <string name="welcome">WelCome To BungeJoin\n\n\n\n</string>

    <string name="refresh">刷新</string>
    <string name="loadmore">加载更多</string>
</resources>
