<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="20dp"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/art"
            style="@style/text_leftsideleader"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/leader_height" />
        <TextView
            style="@style/text_leftsideleader"
            android:text="@string/music"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/leader_height" />
        <TextView
            style="@style/text_leftsideleader"
            android:text="@string/reading"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/leader_height" />
        <TextView
            style="@style/text_leftsideleader"
            android:text="@string/photography"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/leader_height" />
        <TextView
            style="@style/text_leftsideleader"
            android:text="@string/picture"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/leader_height" />
        <TextView
            style="@style/text_leftsideleader"
            android:text="@string/game"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/leader_height" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>